# ecs251

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  clean_server.sh  docker-compose.yml  fileserver.h  fileserver_epoll.c  fileserver_epoll_former.c  fileserver_epoll_old.c  fileserver_epoll_v2.c  fileserver_iouring.c  fileserver_iouring_wcount.c  quick_benchmark.sh  quick_benchmark_v2.sh  quick_benchmark_v3_epoll.sh  quick_benchmark_v3_universal.sh  syscall_analysis.sh  test_server.sh  visualize_results_v2.py  visualize_results_v2_epoll.py  webserver_epoll.c
benchmark_results_epoll/: cpu_c100.txt  cpu_c1000.txt  cpu_c10000.txt  epoll_c10_1kb.txt  epoll_c5000_1kb.txt  epoll_c500_1kb.txt  epoll_c50_1kb.txt  range_c10.txt  range_c1000.txt
benchmark_results_epoll_100KB/: cpu_c10.txt  cpu_c100.txt  cpu_c1000.txt  cpu_c50.txt  cpu_c500.txt  cpu_c5000.txt  epoll_c10000_100kb.txt  epoll_c1000_100kb.txt  epoll_c100_100kb.txt  epoll_c10_100kb.txt  epoll_c5000_100kb.txt  epoll_c500_100kb.txt  epoll_c500_10kb.txt  epoll_c500_10mb.txt  epoll_c500_1kb.txt  epoll_c500_1mb.txt  epoll_c50_100kb.txt  evaluation_report.txt  range_c10.txt  range_c100.txt  range_c1000.txt  syscalls_detailed.txt  upload_c10.txt  upload_c100.txt  upload_c50.txt
benchmark_results_epoll_10KB/: cpu_c10.txt  cpu_c100.txt  cpu_c1000.txt  cpu_c10000.txt  cpu_c50.txt  cpu_c5000.txt  epoll_c10000_10kb.txt  epoll_c1000_10kb.txt  epoll_c100_10kb.txt  epoll_c10_10kb.txt  epoll_c5000_10kb.txt  epoll_c500_100kb.txt  epoll_c500_10kb.txt  epoll_c500_1mb.txt  epoll_c50_10kb.txt  evaluation_report.txt  (+6 more)
(+171 files in other folders)
